--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div th:text="${user.name + ' / ' + user.age}"></div>
+    <div th:text="${user.id + ' / ' + user.name + ' / ' + user.age}"></div>
 
     <script type="application/javascript" src="./common.js"></script>
 </body>
